--- a/index.html
+++ b/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="eng">
-  <head>
-    <meta charset="UTF-8">
-    <title>Dylan Polito</title>
-    <link rel="stylesheet" type="text/css" href="css\styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&family=Tangerine&display=swap" rel="stylesheet">
-  </head>
 
-  <body>
-    <p>This is a change I made</p>
-    <div class="top-container">
-      <img src="images\cloud.png" class="topcloud" alt="Picture of a Cloud">
-        <h1>I'm Dylan</h1>
-        <p> a programmer</p>
-      <img src="images\cloud.png" class="cloud2" alt="Picture of a Cloud">
-      <img src="images\mountain.png" alt="A picture of a mountain">
+<head>
+  <meta charset="UTF-8">
+  <title>Dylan Polito</title>
+  <link rel="stylesheet" type="text/css" href="css\styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&family=Tangerine&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div class="top-container">
+    <img src="images\cloud.png" class="cloudtop" alt="Picture of a Cloud">
+    <h1>I'm Dylan</h1>
+    <h2>a programmer</h2>
+    <img src="images\cloud.png" class="cloudbottom" alt="Picture of a Cloud">
+    <img src="images\mountain.png" alt="A picture of a mountain">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profpic" src="images\profilepic.png" alt="Profile-Picture">
+      <h2>Hello.</h2>
+      <p>I am a software support specialist, working at Transfinder. I am an aspiring website developer. <br> I love to rock
+        climb, and I love my dogs to death.</p>
     </div>
-
-    <div class="middle-container">
-
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="codinggif" src="images\virus.gif" alt="coding gif">
+        <h3>Design and Development</h3>
+        <p>I only started to code a year ago, and by the time this is being seen by anyone but me and Molly, I will be a
+          full fledged web developer. At the moment, my skills include <br> rock climbing, critical thinking, video
+          games, and being AWESOME.</p>
+      </div>
+      <div class="skill-row">
+        <img class="videogamegif" src="images\streaming.gif" alt="video game gif">
+        <h3>Video Games</h3>
+        <p>My best skill is video games. I was top 50 in Overwatch, during peak numbers. I was in the top .00001% of players, out of 4 Million. I have always been great at puzzle games, my favorite being Baba is You and The Talos Principle.</p>
+      </div>
     </div>
-
-    <div class="bottom-container">
-
+    <hr class="hr-bottom">
+    <div class="contact-me">
+      <h2 class="get-in-touch">Get In Touch</h2>
+      <h3 class="get-in-touch-description">If you like video games or rock climbing.</h3>
+      <p class="get-in-touch-second-description">If you like either of these we should talk about them!</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
-  </body>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="signature">© Dylan Polito @ Transfinder</p>
+  </div>
+
+</body>
+
 </html>
